// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer/> should click drawer 1`] = `
<div
  class="StyledDrawer-sc-etbwfh-0 hcUVdE"
  data-testid="drawer"
  elevation="1"
  tabindex="0"
  width="22.25rem"
>
  <h1>
    Title
  </h1>
</div>
`;

exports[`<Drawer/> should fire keydown on overlay 1`] = `
<div
  data-testid="overlay"
  role="dialog"
  style="background-color: rgba(0, 0, 0, 0.3); left: 0px; height: 100vh; position: fixed; top: 0px; width: 100vw; z-index: 1;"
>
  <div
    class="StyledDrawer-sc-etbwfh-0 blqnxU"
    data-testid="drawer"
    elevation="1"
    tabindex="0"
    width="33.375rem"
  >
    <h1>
      Title
    </h1>
  </div>
</div>
`;

exports[`<Drawer/> should no be visible 1`] = `null`;
